2011-01-26  Ethan A Merritt  <merritt@u.washington.edu>

	* term/emf.trm (EMF_filled_polygon): Explicitly set a zero-width
	same-color border for filled polygons, otherwise it inherits a border
	line style.
	Bug #3165902

2011-01-25  Ethan A Merritt  <merritt@u.washington.edu>

	* set/set.c (set_decimalsign):  Possible fix for problem with
	numeric locales on Windows.  Bug #3120819.

2011-01-22  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* src/win/wgraph.c:  Fix typo in previous definition of _WIN32_WINNT.

2011-01-17  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* src/win/wgraph.c:  Pass mouse wheel events through to the core
	mousing code so that interactive pan/zoom works from the windows
	terminal.

2011-01-17  James R. Van Zandt  <jrvz@comcast.net>
	* src/mouse.c (event_buttonpress) src/wxterminal/wxt_gui.cpp
	src/wxterminal/wxt_gui.h: Implement pan and zoom via mouse wheel.
	Back-ported from 4.5.

2011-01-10  David Kuehling <dvdkhlng@gmx.de>

	* term/linux.trm:  Makes linux.trm work with all SVGAlib video modes,
	not only 16 and 256-color modes.

	* src/term.c(init_terminal):  Correct the auto-selection of terminal
	type vgagl or linux.  Only select vgagl if lib3dkit is present.

2010-12-17  Ethan A Merritt  <merritt@u.washington.edu>

	* src/color.h src/graphics.c:  Use t->set_color() rather than
	t->linetype() to set the fill color for pointinterval < 0.

2010-12-17  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* term/win.trm: (WIN_point WIN_filled_polygon):
	Always draw point symbols using a solid line, even if the current line
	type is dashed.  Unfortunately this fix is limited to monochrome mode.
	Bug #1952364

	* src/win/wgraph.c (drawgraph): Selecting linetype 16 caused
	corruption of the color and pen assignments in mono mode.

2010-12-13  Ethan A Merritt  <merritt@u.washington.edu>

	* term/emf.trm:  Backport revised emf terminal from 4.5 branch.

2010-12-12  Ethan A Merritt  <merritt@u.washington.edu>
